migrate code from java 10 style to java 8